# drone_base_project

./: .gitignore  CMakeLists.txt
inc/: control_rate_profile.h  filter.h  maths.h  mixer.h  pid.h  pid_autotune.h  rc_controls.h  rc_curves.h  runtime_config.h  rx.h  scheduler.h  smith_predictor.h
src/: control_rate_profile.c  filter.c  main.c  maths.c  mixer.c  pid.c  pid_autotune.c  rc_controls.c  rc_curves.c  runtime_config.c  scheduler.c  smith_predictor.c  tasks.c
